--- a/app/styles/core/components/LoadPrompt.scss
+++ b/app/styles/core/components/LoadPrompt.scss
@@ -3,6 +3,7 @@
     display: flex;
     height: 100%;
     justify-content: center;
+    padding: $spacing-m;
     width: 100%;
     
     cursor: pointer;
