--- a/app/styles/features/settings/components/View.scss
+++ b/app/styles/features/settings/components/View.scss
@@ -1,10 +1,13 @@
 .settings-view {
+    align-items: flex-start;
     display: flex;
+    height: 100%;
     margin: 0 auto;
     width: 100%;
 
     .settings-nav {
         flex: 0 0 256px;
+        margin: $spacing-m;
 
         ul {
             list-style-type: none;
@@ -24,10 +27,10 @@
     }
 
     .settings-content {
-        flex: 1 1 0px;
+    }
 
-        background: $c-white;
-        border-radius: 2px;
-        color: $c-black;
+    .info-panel {
+        flex: 0 0 256px;
+        margin: $spacing-m;
     }
 }
