--- a/app/styles/core/styles.scss
+++ b/app/styles/core/styles.scss
@@ -34,4 +34,9 @@ textarea {
         border-color: $c-actionable;
         outline: none;
     }
+
+    &[disabled] {
+        border-color: $c-grey;
+        background: $c-light-grey;
+    }
 }
